# esp-idf

components/esp_hid/include/: esp_hidd.h
components/esp_hid/src/: nimble_hidd.c
examples/bluetooth/esp_hid_device/main/: CMakeLists.txt  esp_hid_device_main.c  esp_hid_gap.c  lsm6ds3.cpp  parameter.h
